.golden/6623238490461560947/golden

INITIALPATH:7:11: error: Variable not in scope: b0001
  |
7 | main = [f|{0b0001}|]
  |           ^^^^^^^^^^
